# yampa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  filter_rules.rls  generate-env.sh  lint-rules.sh  network.conf  proxy.conf  reload.sh  requirements.txt  run-tests.sh
.vim/: coc-settings.json
demo_plugins/: filter_plugin.py  my_awesome_plugin.py  traffic_dump_wireguard.py
demo_plugins/my_more_complicated_plugin/: __init__.py  plugin.py
filter_engine/: .vimspector.json  Cargo.toml  \  connection_info.py  example_rules.rls  filter_engine.pyi  filter_engine_plugin.py  pyproject.toml  rule_syntax.txt
filter_engine/src/: datatypes.rs  lib.rs  main.rs  parser.rs  python.rs
filter_engine/src/datatypes/: effects.rs  rule.rs
filter_engine/src/python/: datatypes.rs  filter_engine.rs
filter_engine/tests/: parser_tests.rs
plugins/: filter_plugin.py
rules/: example_rules.rls
test/client/: Dockerfile  requirements.txt  start.sh
test/plugins/: filter_plugin.py  ssl_termination_plugin.py  test_plugin.py  test_ssl_termination_plugin.py
test/rules/: test_rules.rls
test/server/: Dockerfile  __main__.py  http.py  requirements.txt  start.sh
yamp/: __init__.py  __main__.py  config.py  my_awesome_plugins.py  plugin.py  plugin_manager.py  plugin_spec.py
yamp/plugins/: base.py  manager.py  plugin.py
yamp/proxy/: __init__.py  config.py  connection.py  proxy.py  stream.py
yamp/shared/: direction.py  filter_action.py  metadata.py
yampa/: __init__.py
yampa/plugins/: __init__.py
yampa/proxy/: connection.py  stream.py
yampa/shared/: __init__.py
(+3 files in other folders)
